// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`user resources createUserSetting should resolve on success 1`] = `
Object {
  "config": Object {
    "data": "{\\"data\\":{\\"1\\":{\\"display_order\\":1,\\"hide\\":false}},\\"type\\":\\"ticket-views\\"}",
    "headers": Object {
      "Accept": "application/json, text/plain, */*",
      "Content-Type": "application/json;charset=utf-8",
    },
    "maxContentLength": -1,
    "method": "post",
    "timeout": 0,
    "transformRequest": Array [
      [Function],
    ],
    "transformResponse": Array [
      [Function],
    ],
    "url": "/api/users/0/settings/",
    "validateStatus": [Function],
    "xsrfCookieName": "XSRF-TOKEN",
    "xsrfHeaderName": "X-XSRF-TOKEN",
  },
  "data": Object {
    "data": Object {
      "1": Object {
        "display_order": 1,
        "hide": false,
      },
    },
    "id": 2,
    "type": "ticket-views",
  },
  "headers": undefined,
  "request": Object {
    "responseUrl": "/api/users/0/settings/",
  },
  "status": 200,
}
`;

exports[`user resources updateUserSetting should resolve on success 1`] = `
Object {
  "config": Object {
    "data": "{\\"data\\":{\\"1\\":{\\"display_order\\":1,\\"hide\\":false}},\\"id\\":2,\\"type\\":\\"ticket-views\\"}",
    "headers": Object {
      "Accept": "application/json, text/plain, */*",
      "Content-Type": "application/json;charset=utf-8",
    },
    "maxContentLength": -1,
    "method": "put",
    "timeout": 0,
    "transformRequest": Array [
      [Function],
    ],
    "transformResponse": Array [
      [Function],
    ],
    "url": "/api/users/0/settings/2/",
    "validateStatus": [Function],
    "xsrfCookieName": "XSRF-TOKEN",
    "xsrfHeaderName": "X-XSRF-TOKEN",
  },
  "data": Object {
    "data": Object {
      "1": Object {
        "display_order": 1,
        "hide": false,
      },
    },
    "id": 2,
    "type": "ticket-views",
  },
  "headers": undefined,
  "request": Object {
    "responseUrl": "/api/users/0/settings/2/",
  },
  "status": 200,
}
`;

exports[`user resources updateUserSetting should resolve on success 2`] = `
Object {
  "delete": Array [],
  "get": Array [],
  "head": Array [],
  "list": Array [],
  "options": Array [],
  "patch": Array [],
  "post": Array [],
  "put": Array [
    Object {
      "data": "{\\"data\\":{\\"1\\":{\\"display_order\\":1,\\"hide\\":false}},\\"id\\":2,\\"type\\":\\"ticket-views\\"}",
      "headers": Object {
        "Accept": "application/json, text/plain, */*",
        "Content-Type": "application/json;charset=utf-8",
      },
      "maxContentLength": -1,
      "method": "put",
      "timeout": 0,
      "transformRequest": Array [
        [Function],
      ],
      "transformResponse": Array [
        [Function],
      ],
      "url": "/api/users/0/settings/2/",
      "validateStatus": [Function],
      "xsrfCookieName": "XSRF-TOKEN",
      "xsrfHeaderName": "X-XSRF-TOKEN",
    },
  ],
}
`;
